# dotfiles

./: Readme.md  rebuild
dns/: Readme.md  duckdns.nix
fileserver/: Readme.md  fileserver.nix
homepage/: AGENTS.md  Cargo.toml  Dioxus.toml  Home Network.md  README.md  flake.nix  index.html
homepage/assets/: house.excalidraw
homepage/assets/styling/: blog.css  main.css
homepage/nix/: dioxus-cli.nix  package.nix
homepage/public/: manifest.json
homepage/public/DoodleCSS/: doodle.css
homepage/src/: doorbell.rs  main.rs  server.rs  storage.rs  timers.rs  wireguard.rs
homepage/src/components/: cat.rs  doorbell.rs  echo.rs  expand_box.rs  mod.rs  qrcode.rs  wireguard.rs
homepage/src/doorbell/: server.rs
homepage/src/server/: doorbell.rs  wireguard.rs
homepage/src/views/: blog.rs  home.rs  navbar.rs
homepage/src/wireguard/: server.rs
homeserver/: Home Network.md  configuration.nix  flake.nix  hardware-configuration.nix
immich/: immich.nix
setup/: Readme.md
smb/: Readme.md  smb.nix
ssh/: authorized_keys
wireguard/: Readme.md  config.json  peers.json  wg0.pub  wireguard.nix
