[package]
name = "homepage"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium = "0.2"
dioxus = { version = "0.8.0-alpha.0", features = ["fullstack", "router"] }
percent-encoding = "2.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

gloo-timers = { version = "0.4", features = ["futures"], optional = true }
qrcode = {
  version = "0.14.1",
  default-features = false,
  features = ["svg"],
}
web-sys = { version = "0.3", features = ["Storage", "Window"], optional = true }

[features]
default = ["web"]
# The feature that are only required for the server = ["dioxus/server"] build target should be optional and only enabled in the server = ["dioxus/server"] feature
server = ["dioxus/server"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web", "gloo-timers", "web-sys"]

[profile.release]
opt-level = 2
debug = "line-tables-only"
